# gospel-ortac-release-talk

./: plan.md
demo/: demo.opam  dune  dune-project
demo/src/: dune  my_queue.ml  my_queue.mli  queue.ml  queue.mli
demo/test/: dune
slides/: Makefile
slides/tex/: main.tex
