(rule
 (target queue_stm_tests.ml)
 (alias runtest)
 ; (package demo)
 (deps
  (:q %{project_root}/src/my_queue.mli)
  (package ortac-qcheck-stm))
 (action
  (run ortac qcheck-stm %{q} "create ()" "int t" -o %{target})))

(test
 (name queue_stm_tests)
 ; (package demo)
 (modules queue_stm_tests)
 (libraries
  qcheck-core
  qcheck-core.runner
  qcheck-stm.stm
  qcheck-stm.sequential
  qcheck-multicoretests-util
  ortac-runtime
  my_queue))

(rule
 (alias runtest)
 ; (package demo)
 (action
  (run %{dep:queue_stm_tests.exe} -v)))

(rule
 (target hashtbl_stm_tests.ml)
 (alias runtest)
 ; (package demo)
 (action
  (run
   ortac
   qcheck-stm
   %{project_root}/src/hashtbl.mli
   "create ~random:false 16"
   "(char, int) t"
   -o
   %{target})))

(test
 (name hashtbl_stm_tests)
 ; (package demo)
 (modules hashtbl_stm_tests)
 (libraries
  qcheck-core
  qcheck-core.runner
  qcheck-stm.stm
  qcheck-stm.sequential
  qcheck-multicoretests-util
  ortac-runtime
  hashtbl))

(rule
 (alias runtest)
 ; (package demo)
 (action
  (run %{dep:hashtbl_stm_tests.exe} -v)))
